Improved torsion and added values for shape and size

--- a/hugo/layouts/neo4j/simple.html
+++ b/hugo/layouts/neo4j/simple.html
@@ -57,9 +57,10 @@
         await viz.render_async()
 
         options = {
+
             physics  : {
                 barnesHut: {
-                    gravitationalConstant: params_Data.options.gravitationalConstant,
+                    gravitationalConstant: params_Data.options.gravitationalConstant
                 } } }
 
         viz._network.setOptions(options)
