improved torsion and more experiments with new node and edge properties

--- a/hugo/layouts/neo4j/simple.html
+++ b/hugo/layouts/neo4j/simple.html
@@ -57,10 +57,25 @@
         await viz.render_async()
 
         options = {
+            nodes: {
+                    shape :'box'
+            },
+            edges: {
+                //arrows: {
+                //    to  : {enabled: true } },
+                //dashes : [1,2],
 
+                color: {color: "black" },
+
+                length: 20,
+
+                //value: 0.1,
+                physics: true
+            },
             physics  : {
                 barnesHut: {
-                    gravitationalConstant: params_Data.options.gravitationalConstant
+                    gravitationalConstant: params_Data.options.gravitationalConstant,
+                    //centralGravity : 0.5
                 } } }
 
         viz._network.setOptions(options)
