--- a/hugo/layouts/neo4j/simple.html
+++ b/hugo/layouts/neo4j/simple.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Neovis.js Simple Example</title>
+    <!--<link rel="stylesheet" href="/css/fontawesome-4.7.0.css">-->
+
+    <!-- see https://fontawesome.com/v4.7.0/icons/ for icons -->
     <style type="text/css">
         html, body {
             font: 16pt arial;
@@ -40,48 +43,119 @@
 
     var viz;
 
+    var nodes = null;
+    var edges = null;
+    var network = null;
+
+    var DIR = 'http://visjs.org/examples/network/img/refresh-cl/';
+    var EDGE_LENGTH_MAIN = 150;
+    var EDGE_LENGTH_SUB = 50;
+
+    // Called when the Visualization API is loaded.
+    function draw_2() {
+        // Create a data table with nodes.
+        nodes = [];
+
+        // Create a data table with links.
+        edges = [];
+
+        nodes.push({id: 1, label: 'Main', image: DIR + 'Network-Pipe-icon.png', shape: 'image'});
+        nodes.push({id: 2, label: 'Office', image: DIR + 'Network-Pipe-icon.png', shape: 'image'});
+        nodes.push({id: 3, label: 'Wireless', image: DIR + 'Network-Pipe-icon.png', shape: 'image'});
+
+
+        nodes.push({id: 104, label: 'Internet', image: DIR + 'System-Firewall-2-icon.png', shape: 'image'});
+        edges.push({from: 1, to: 104, length: EDGE_LENGTH_SUB});
+
+
+        // create a network
+        var container = document.getElementById('mynetwork');
+        var data = {
+            nodes: nodes,
+            edges: edges
+        };
+        var options = {};
+        viz = new NeoVis.default({})
+        network = new viz._vis.Network(container, data, options);
+    }
+
     async function draw() {
         var config = {
-            container_id    : "viz",
-            server_url      : "{{ .Site.Data.neo4j_server.url       }}",
-            server_user     : "{{ .Site.Data.neo4j_server.user      }}",
-            server_password : "{{ .Site.Data.neo4j_server.password  }}",
-            labels          : params_Data.labels,
-            relationships   : params_Data.relationships,
-            initial_cypher  : params_Data.cypher
+            container_id: "viz",
+            server_url: "{{ .Site.Data.neo4j_server.url       }}",
+            server_user: "{{ .Site.Data.neo4j_server.user      }}",
+            server_password: "{{ .Site.Data.neo4j_server.password  }}",
+            labels: params_Data.labels,
+            relationships: params_Data.relationships,
+            initial_cypher: params_Data.cypher
         };
 
         viz = new NeoVis.default(config);
         //viz.render();
         viz.setup()
-        await viz.render_async()
+        await
+        viz.render_async()
 
         options = {
             nodes: {
-                    shape :'box'
+                shape: 'box'
+//                    label: '123',
+//                    shape : 'image',
+//                    image : 'http://visjs.org/examples/network/img/refresh-cl/System-Firewall-2-icon.png'
             },
             edges: {
                 //arrows: {
                 //    to  : {enabled: true } },
                 //dashes : [1,2],
 
-                color: {color: "black" },
+                color: {color: "black"},
 
                 length: 20,
 
                 //value: 0.1,
                 physics: true
             },
-            physics  : {
+            physics: {
                 barnesHut: {
                     gravitationalConstant: params_Data.options.gravitationalConstant,
                     //centralGravity : 0.5
-                } } }
+                }
+            }
+        }
 
         viz._network.setOptions(options)
-
-
     }
+    function add_Extra_Nodes() {
+
+        add_Node = function (html) {
+            var svg = '<svg xmlns="http://www.w3.org/2000/svg" width="200" height="100">' +
+                '  <rect x="0" y="0" width="100%" height="100%" fill="#C0C0C0" stroke-width="20" stroke="#ffffff" ></rect>' +
+                '    <foreignObject x="15" y="10" width="100%" height="100%">' +
+                '      <div xmlns="http://www.w3.org/1999/xhtml">' +
+                html +
+                '     </div>' +
+                '  </foreignObject>' +
+                '</svg>';
+            var url = "data:image/svg+xml;charset=utf-8," + encodeURIComponent(svg)
+            nodes = viz._network.body.data.nodes;
+            edges = viz._network.body.data.edges;
+            node  = nodes.add({image: url, shape: 'image'})[0]
+
+            id_1 = Object.keys(nodes._data)[0]
+            id_6 = Object.keys(nodes._data)[5]
+            edges.add( {from : id_1  , to: node })
+            edges.add( {from : id_6  , to: node })
+
+        }
+
+        add_Node('<h1 style="font-family: Arial">an H1 tag</h1>')
+        add_Node('<table> ' +
+            '<tr><th>col 1</th> <th>col 2</th></tr>' +
+            '<tr><td>data 1</td> <td>data 2</td></tr>' +
+            '<tr><td>data 3</td> <td>data 4</td></tr>' +
+            '</table>')
+    }
+    setTimeout(add_Extra_Nodes, 500)
 </script>
 </body>
 </html>
