Added multiple neovis queries in md files

--- a/hugo/layouts/neo4j/simple.html
+++ b/hugo/layouts/neo4j/simple.html
@@ -11,8 +11,8 @@
         }
 
         #viz {
-            width: 700px;
-            height: 700px;
+            width: 100%;
+            height: 550px;
             border: 1px solid lightgray;
             font: 22pt arial;
         }
@@ -22,6 +22,13 @@
 <h1>{{ .Params.title }}</h1>
 {{ .Content }}
 
+<h4>Cypher</h4>
+<textarea id='cypher'style="width:90%;height:50px">{{ .Params.cypher }} </textarea>
+
+<button onclick="run_query()">run</button>
+<div id="result">...</div>
+
+<h4>Graph</h4>
 <script >
     var params_Data = {
         cypher        : "{{ .Params.cypher }}",
@@ -42,42 +49,8 @@
 <script type="text/javascript">
 
     var viz;
-
-    var nodes = null;
-    var edges = null;
-    var network = null;
-
-    var DIR = 'http://visjs.org/examples/network/img/refresh-cl/';
-    var EDGE_LENGTH_MAIN = 150;
-    var EDGE_LENGTH_SUB = 50;
-
-    // Called when the Visualization API is loaded.
-    function draw_2() {
-        // Create a data table with nodes.
-        nodes = [];
-
-        // Create a data table with links.
-        edges = [];
-
-        nodes.push({id: 1, label: 'Main', image: DIR + 'Network-Pipe-icon.png', shape: 'image'});
-        nodes.push({id: 2, label: 'Office', image: DIR + 'Network-Pipe-icon.png', shape: 'image'});
-        nodes.push({id: 3, label: 'Wireless', image: DIR + 'Network-Pipe-icon.png', shape: 'image'});
-
-
-        nodes.push({id: 104, label: 'Internet', image: DIR + 'System-Firewall-2-icon.png', shape: 'image'});
-        edges.push({from: 1, to: 104, length: EDGE_LENGTH_SUB});
-
-
-        // create a network
-        var container = document.getElementById('mynetwork');
-        var data = {
-            nodes: nodes,
-            edges: edges
-        };
-        var options = {};
-        viz = new NeoVis.default({})
-        network = new viz._vis.Network(container, data, options);
-    }
+    var root_Node_Id = '{{ .Params.root_Node}}'
+    var cypher       = params_Data.cypher
 
     async function draw() {
         var config = {
@@ -87,32 +60,20 @@
             server_password: "{{ .Site.Data.neo4j_server.password  }}",
             labels: params_Data.labels,
             relationships: params_Data.relationships,
-            initial_cypher: params_Data.cypher
+            initial_cypher: cypher
         };
 
         viz = new NeoVis.default(config);
-        //viz.render();
         viz.setup()
-        await
-        viz.render_async()
+        await viz.render_async()
 
         options = {
             nodes: {
                 shape: 'box'
-//                    label: '123',
-//                    shape : 'image',
-//                    image : 'http://visjs.org/examples/network/img/refresh-cl/System-Firewall-2-icon.png'
             },
             edges: {
-                //arrows: {
-                //    to  : {enabled: true } },
-                //dashes : [1,2],
-
                 color: {color: "black"},
-
-                length: 20,
-
-                //value: 0.1,
+                //length: 20,
                 physics: true
             },
             physics: {
@@ -124,38 +85,90 @@
         }
 
         viz._network.setOptions(options)
-    }
-    function add_Extra_Nodes() {
 
-        add_Node = function (html) {
-            var svg = '<svg xmlns="http://www.w3.org/2000/svg" width="200" height="100">' +
-                '  <rect x="0" y="0" width="100%" height="100%" fill="#C0C0C0" stroke-width="20" stroke="#ffffff" ></rect>' +
-                '    <foreignObject x="15" y="10" width="100%" height="100%">' +
-                '      <div xmlns="http://www.w3.org/1999/xhtml">' +
-                html +
-                '     </div>' +
-                '  </foreignObject>' +
-                '</svg>';
-            var url = "data:image/svg+xml;charset=utf-8," + encodeURIComponent(svg)
+//        viz._network.on("click", function (params) {
+//
+//            id = params.nodes[0]
+//            nodes = viz._network.body.data.nodes;
+//            node = nodes.get(id)
+//            console.log(node)
+//
+//        })
+        viz._network.on("doubleClick", function (params) {
+
+            id = params.nodes[0]
             nodes = viz._network.body.data.nodes;
-            edges = viz._network.body.data.edges;
-            node  = nodes.add({image: url, shape: 'image'})[0]
+            node = nodes.get(id)
+            console.log(node)
+            url = "https://jira.photobox.com/browse/" + node.label
+            url = "/api/jira/issue/" + node.label + '?pretty'
+            console.log("going to open" + node.label)
+            window.open(url, '_blank');
 
-            id_1 = Object.keys(nodes._data)[0]
-            id_6 = Object.keys(nodes._data)[5]
-            edges.add( {from : id_1  , to: node })
-            edges.add( {from : id_6  , to: node })
+        })
+        nodes = viz._network.body.data.nodes;
+        edges = viz._network.body.data.edges;
 
-        }
-
-        add_Node('<h1 style="font-family: Arial">an H1 tag</h1>')
-        add_Node('<table> ' +
-            '<tr><th>col 1</th> <th>col 2</th></tr>' +
-            '<tr><td>data 1</td> <td>data 2</td></tr>' +
-            '<tr><td>data 3</td> <td>data 4</td></tr>' +
-            '</table>')
+        document.getElementById("result").innerHTML = 'received ' + nodes.length + ' nodes and ' + edges.length + ' edges'
+        set_Root_Node(root_Node_Id)
     }
-    setTimeout(add_Extra_Nodes, 500)
+
+    function set_Root_Node(id)
+    {
+
+        match = nodes.get({
+            filter: function (item) {
+                return (item.label == id);
+            }
+        })
+        if (match.length === 1)
+        {
+            //console.log(match[0])
+            values = { _shape: 'circle', mass:10, font: { size: 20} , _color:'red', group:undefined }
+            values.id = match[0].id
+            nodes.update(values)
+        }
+        else
+        {
+            console.log('Error: Could not find Root Node: ' + id )
+        }
+    }
+
+    function run_query() {
+        cypher = document.getElementById("cypher").value
+        draw()
+    }
+//    function add_Extra_Nodes() {
+//
+//        add_Node = function (html) {
+//            var svg = '<svg xmlns="http://www.w3.org/2000/svg" width="200" height="100">' +
+//                '  <rect x="0" y="0" width="100%" height="100%" fill="#C0C0C0" stroke-width="20" stroke="#ffffff" ></rect>' +
+//                '    <foreignObject x="15" y="10" width="100%" height="100%">' +
+//                '      <div xmlns="http://www.w3.org/1999/xhtml">' +
+//                html +
+//                '     </div>' +
+//                '  </foreignObject>' +
+//                '</svg>';
+//            var url = "data:image/svg+xml;charset=utf-8," + encodeURIComponent(svg)
+//            nodes = viz._network.body.data.nodes;
+//            edges = viz._network.body.data.edges;
+//            node  = nodes.add({image: url, shape: 'image'})[0]
+//
+//            id_1 = Object.keys(nodes._data)[0]
+//            id_6 = Object.keys(nodes._data)[5]
+//            edges.add( {from : id_1  , to: node })
+//            edges.add( {from : id_6  , to: node })
+//
+//        }
+//
+//        add_Node('<h1 style="font-family: Arial">an H1 tag</h1>')
+//        add_Node('<table> ' +
+//            '<tr><th>col 1</th> <th>col 2</th></tr>' +
+//            '<tr><td>data 1</td> <td>data 2</td></tr>' +
+//            '<tr><td>data 3</td> <td>data 4</td></tr>' +
+//            '</table>')
+//    }
+//    setTimeout(add_Extra_Nodes, 500)
 </script>
 </body>
 </html>
