Added first working version of REPL and Visjs shortcode

--- a/hugo/layouts/partials/repl/js-includes.html
+++ b/hugo/layouts/partials/repl/js-includes.html
@@ -1,7 +1,8 @@
-<link rel="stylesheet" href="http://codemirror.net/lib/codemirror.css">
+<link rel="stylesheet" href="/css/repl/codemirror.css">
 
-<script src="http://codemirror.net/lib/codemirror.js"></script>
-<script src="http://codemirror.net/addon/edit/matchbrackets.js"></script>
-<script src="http://codemirror.net/mode/coffeescript/coffeescript.js"></script>
+<script src="/js/repl/codemirror.js"></script>
+<!--<script src="http://codemirror.net/addon/edit/matchbrackets.js"></script>-->
+<script src="/js/repl/coffeescript.js"></script>
 
-<script src="http://coffeescript.org/v2/browser-compiler/coffeescript.js"></script>
+<script src="/js/repl/browser-compiler-coffeescript.js"></script>
+
