--- a/hugo/layouts/partials/visjs/just-canvas.html
+++ b/hugo/layouts/partials/visjs/just-canvas.html
@@ -1,16 +1,46 @@
+<script src="/js/visjs/vis.js" > </script>
 
 {{ $result_div     := .Scratch.Get "result_div"          }}
 
-<script src="http://visjs.org/dist/vis.js" />
+{{ $height         := .Scratch.Get "height"              }}
 
-<div id="{{$result_div}}"/>
+<style>
+    #{{$result_div}} {
+        height : {{ safeJS $height }}px;
+    }
+
+    #card-graph .card-header {   padding:0px;  padding-left:5px   }
+    #card-graph .card-body   {   padding:0px;                     }
+
+</style>
+
+<div class="card border-primary " id="card-graph">
+    <div class="card-header">
+        Graph
+    </div>
+    <div class="card-body">
+        <div id="{{$result_div}}"></div>
+    </div>
+</div>
+
+
+
 <script>
     var container = document.getElementById('{{$result_div}}');
     var data = {
-        nodes: {},
-        edges: {}
+        nodes: new vis.DataSet({}),
+        edges: new vis.DataSet({})
     };
     var options = {};
     var network = new vis.Network(container, data, options);
-    var network = new vis.Network(container, data, options);
+
+    function graph(nodes, edges, options)
+    {
+        var data = {
+            nodes: new vis.DataSet(nodes),
+            edges: new vis.DataSet(edges)
+        };
+        options = options ? options : {}
+        network.setData(data, options)
+    }
 </script>
