--- a/hugo/layouts/shortcodes/repl-visjs.html
+++ b/hugo/layouts/shortcodes/repl-visjs.html
@@ -1,17 +1,18 @@
 <h1>REPL and vizJs</h1>
 
-{{ partial "repl/vars-setup.html" . }}
-{{ partial "repl/js-includes.html"       }}
-{{ partial "repl/css-styles.html"        }}
+{{ .Scratch.Set "code"       .Inner         }}
 
-{{ $code  := .Inner }}
-{{ .Scratch.Set "code"       $code       }}
-
+{{ partial "repl/vars-setup.html"         . }}
+{{ partial "repl/js-includes.html"          }}
+{{ partial "repl/css-styles.html"           }}
 
 {{ $code_div   := .Scratch.Get "code_div"   }}
 {{ $result_div := .Scratch.Get "result_div" }}
 
-<div class="row">
+{{ $height     := .Scratch.Get "height"     }}
+
+
+<div class="row" id="repl-visjs">
     <div class="col-6">
         {{ partial "repl/card-code.html" . }}
     </div>
