Refactored location of examples Added ability to just see the visjs graph

--- a/hugo/layouts/partials/neo4j/cypher.html
+++ b/hugo/layouts/partials/neo4j/cypher.html
@@ -11,7 +11,7 @@
     {{ end }}
     <div class="viz" id="{{ $id }}"></div>
     <script>
-        let neo = null
+        neo = null
         $("#{{ $id }}").height({{ safeJS $height }});
         $("#{{ $id }}").width( {{ safeJS $width  }});
         $(function() {
