--- a/hugo/layouts/shortcodes/repl-visjs.html
+++ b/hugo/layouts/shortcodes/repl-visjs.html
@@ -6,20 +6,31 @@
 {{ partial "repl/js-includes.html"          }}
 {{ partial "repl/css-styles.html"           }}
 
+
 {{ $code_div   := .Scratch.Get "code_div"   }}
 {{ $result_div := .Scratch.Get "result_div" }}
-
 {{ $height     := .Scratch.Get "height"     }}
+{{ $show       := .Scratch.Get "show"   }}
 
-
-<div class="row" id="repl-visjs">
-    <div class="col-6">
-        {{ partial "repl/card-code.html" . }}
-    </div>
-    <div class="col-6">
+{{ if eq $show "graph-only"}}
+<div style="display:none">
+    {{ partial "repl/card-code.html" . }}
+</div>
+<div class="row" >
+    <div class="col-12">
         {{ partial "visjs/just-canvas.html" . }}
-
     </div>
 </div>
+{{ else }}
 
+    <div class="row" id="repl-visjs">
+        <div class="col-6" class="display:none">
+            {{ partial "repl/card-code.html" . }}
+        </div>
+        <div class="col-6">
+            {{ partial "visjs/just-canvas.html" . }}
+
+        </div>
+    </div>
+{{ end }}
 {{ partial "repl/js-codemirror.html" . }}
