Added stats and error reporting

--- a/hugo/layouts/partials/neo4j/cypher.html
+++ b/hugo/layouts/partials/neo4j/cypher.html
@@ -10,6 +10,11 @@
     <h3>{{ $title }}</h3>
     {{ end }}
     <div class="viz" id="{{ $id }}"></div>
+    <small>
+        <span class="badge badge-pill badge-dark"  id="node_count">0</span> nodes
+        <span class="badge badge-pill badge-dark"  id="edge_count">0</span> edges
+        <i id="loading-spinner" class='fa fa-spinner fa-spin fa-fw'></i>
+    </small>
     <script>
         neo = null
         $("#{{ $id }}").height({{ safeJS $height }});
