Fixed home page and added dedicated page for api calls Added more help pages Added couple missing backend jira api parser

--- a/hugo/layouts/partials/neo4j/cypher.html
+++ b/hugo/layouts/partials/neo4j/cypher.html
@@ -36,6 +36,12 @@
                             }
                         })
                     }
+                    else
+                    {
+                        if (window.afterLoad) {
+                            window.afterLoad()
+                        }
+                    }
                 });
 
 
