adding local copy of neovis.js

--- a/hugo/layouts/partials/neo4j/page-core.html
+++ b/hugo/layouts/partials/neo4j/page-core.html
@@ -1,4 +1,5 @@
-<script src="http://localhost:3000/api/js/neovis.js"></script>
+<!--<script src="http://localhost:3000/api/js/neovis.js"></script>-->
+<script src="http://localhost:3000/js/neo4j/neovis.js"></script>
 
 <script>
 
