--- a/hugo/layouts/neo4j/simple.html
+++ b/hugo/layouts/neo4j/simple.html
@@ -45,7 +45,7 @@
 
 
 <div id="viz"></div>
-<script src="http://localhost:3000/api/js/neovis.js"></script>
+<script src="/api/js/neovis.js"></script>
 <script type="text/javascript">
     
     var viz;
