Added large cyber query viewer Improved data import (including ability to import jira properties into neo4j properties)

--- a/hugo/layouts/neo4j/simple.html
+++ b/hugo/layouts/neo4j/simple.html
@@ -100,9 +100,9 @@
             nodes = viz._network.body.data.nodes;
             node = nodes.get(id)
             console.log(node)
-            url = "https://jira.photobox.com/browse/" + node.label
-            url = "/api/jira/issue/" + node.label + '?pretty'
-            console.log("going to open" + node.label)
+            url = "https://jira.photobox.com/browse/" + node.key
+            //url = "/api/jira/issue/" + node.label + '?pretty'
+            console.log("going to open" + node.key)
             window.open(url, '_blank');
 
         })
